// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product title and Card Debe de mostrar el componente correctamente con el titulo personalizado  1`] = `
<span
  className="productDescription undefined"
>
  Custom Product
</span>
`;

exports[`Product title and Card Debe de mostrar el componente correctamente con el titulo personalizado  2`] = `
<div
  className="productCard undefined"
>
  <span
    className="productDescription undefined"
  >
    Coffe Cup - No Img
  </span>
</div>
`;
